# codesmith

./: .gitignore  DEVELOPMENT.md  Pipfile  README.md  pyproject.toml  setup.py
codesmith/: __package_metadata__.py  cli.py
src/codesmith/: cli.py
test/examples/: artifacts.yaml
