[project]
name = "codesmith"
version = "0.1.0"
description = "A software construction tool"
authors = [
    {name= "Gary Martin", email="gary.martin@physics.org"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "digraphtools (>=0.2.1,<0.3.0)"
]

[project.scripts]
csmake = "codesmith.cli:main"

[tool.poetry]
packages = [{include = "codesmith", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target_version = ['py313']
